--- a/VodSDKTest/packages.config
+++ b/VodSDKTest/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Pathoschild.Http.FluentClient" version="3.2.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
-  <package id="Tencent.QCloud.Cos.Sdk" version="5.4.3" targetFramework="net461" />
-  <package id="TencentCloudSDK" version="3.0.37" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net461" />
+  <package id="Tencent.QCloud.Cos.Sdk" version="5.4.17" targetFramework="net461" />
+  <package id="TencentCloudSDK" version="3.0.97" targetFramework="net461" />
 </packages>
